// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot with background scroll in state  1`] = `
<div
  className="films"
>
  <h1
    className="App__TITLE"
  >
    SWAPI BOX
  </h1>
  <Component
    dont="stop"
  />
  <Component
    activeButton="films"
    favorites={Array []}
    getData={[Function]}
  />
  <Component
    favorites={Array []}
    handlePage={[Function]}
    people={null}
    planets={null}
    toggleFavorites={[Function]}
    vehicles={null}
  />
</div>
`;

exports[`App should match snapshot with default states 1`] = `
<div
  className="films"
>
  <h1
    className="App__TITLE"
  >
    SWAPI BOX
  </h1>
  <Component
    activeButton="films"
    favorites={Array []}
    getData={[Function]}
  />
  <Component
    favorites={Array []}
    handlePage={[Function]}
    people={null}
    planets={null}
    toggleFavorites={[Function]}
    vehicles={null}
  />
</div>
`;
